# chess_board_numpy

./: README.md  pyproject.toml
numpy_project/: num_pro.ipynb
tests/: test_numpy_project.py
