[tool.poetry]
name = "numpy_project"
version = "0.1.0"
description = ""
authors = ["monaSalih <monaalobisat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21.1"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
